--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
@@ -3,7 +3,7 @@
 
 // This file is for SCSS used only by the ItemViewCommentBox component
 // ...SCSS shared with other components is in itemView.scss
-.item-container-component {
+.item-view-component {
 	.form-submit-centering-container {
 		position: relative;
 		height: 50px;
