--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewDisplayItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewDisplayItemInfo.scss
@@ -3,11 +3,11 @@
 
 // This file is for SCSS used only by the ItemViewDisplayInfo component
 // ...SCSS shared with other components is in itemView.scss
-.item-container-component {
+.item-view-component {
 	.item-name {
 		margin: 32px 0px 20px 0px;
 		text-align: center;
-		font-size: v.$item-container-name-font-size;
+		font-size: v.$item-view-name-font-size;
 	}
 
 	.item-box__group__field__type {
